--- a/maplewood-recycles/package.json
+++ b/maplewood-recycles/package.json
@@ -19,8 +19,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@turf/boolean-point-in-polygon": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
     "axios": "^1.1.3",
     "jquery": "^3.6.1",
+    "mapbox-gl": "^2.12.0",
     "maplibre-gl": "^2.4.0",
     "mitt": "^3.0.0",
     "vue": "^3.2.41",
