--- a/maplewood-recycles/package.json
+++ b/maplewood-recycles/package.json
@@ -23,6 +23,7 @@
     "@turf/boolean-point-in-polygon": "^6.5.0",
     "@turf/helpers": "^6.5.0",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
     "jquery": "^3.6.1",
     "mapbox-gl": "^2.12.0",
     "maplibre-gl": "^2.4.0",
