--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,5 @@ jobs:
         cache: 'npm'
         cache-dependency-path: '**/package-lock.json'
     - run: cd maplewood-recycles
-    - run: npm ci
+    - run: npm i
     - run: npm run build --if-present
