--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: '**/package-lock.json'
-    - run: cd maplewood-recycles
-    - run: npm i
-    - run: npm run build --if-present
+    - run: cd maplewood-recycles/; npm ci; npm run build --if-present;
