--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+f(:7'vr6;WY.f]]|'zFd
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -25,4 +25,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: '**/package-lock.json'
-    - run: cd maplewood-recycles/; npm ci; npm run build --if-present;
+    - run: cd maplewood-recycles/; npm ci; npm run build --if-present; cp -r dist/* /var/www/html/recycle/;
